# GeoRulesLobePy

./: .gitignore  CITATION.cff  README.md  Test.py  main.py  pyproject.toml  requirements.txt  setup.py
data/: Bathy1.npy  column_corner.npy  data_set1.xlsx  lobe_properties.npy  lobe_thickness.npy
docs/: better_code_practices.md  git-guide.md  newfile.txt  transition_matrices.md
georules/: M_LRBM.py  M_LRBM_test.py  P_error_3Dgrid.py  P_healing.py  P_smoothing.py  P_stacking.py  P_thickness1.py  S_3Dgrid.py  S_3Dgrid_healing.py  S_3Dgrid_ver1.py  S_Healing.py  S_LobeElement.py  S_Lobegeom.py  S_MapPropXY.py  S_MapPropXY_ver2.py  S_MapPropZX.py  S_Markov.py  S_PasteArray.py  S_ProbMap.py  S_RotateArray.py  S_RotatePaste.py  S_RotationAngle.py  S_Stacking.py  S_lobe_facies.py  V_3Dlobe.py  V_Probability_Maps.py  V_grid.py  angle_list.npy  angle_plot.py  bathymetry.py  lag_angle_plot.py  lobe_thickness_plot.py  lobes.py  markov.py  markov_state_plot.py  paper_figures.py  surface_variance_plot.py  utils.py  variance_bathymetry.py
georules/old_code/: S_3Dgrid.py  S_3Dlobe.py  S_thickness.py  V_centroids_2Dplots.py  (+1 more)
georuleslobepy/: S_3Dgrid_healing.py  S_Healing.py  S_Lobegeom.py  S_MapPropXY.py  S_MapPropZX.py  S_PasteArray.py  S_ProbMap.py  S_RotateArray.py  S_RotateCoord.py  S_RotatePaste.py  S_RotationAngle.py  S_Stacking.py  S_lobe_facies.py  S_nonzero_one.py  bathymetry.py  lobes.py  markov.py  utils.py  variance_bathymetry.py
notebooks/: Results_Visualizations.ipynb  main_notebook.ipynb  markov-chain.ipynb
tests/: loop-main-test.py  test-main-log.py
(+11 files in other folders)
